synopsis:     "SMT integration for Coq using reflection"
description:  "SMT integration for Coq using reflection"
name:         "mirrorsolve"
opam-version: "2.0"
maintainer:   "jsarracino@cornell.edu"
authors:      "John Sarracino"
homepage:     "https://github.com/jsarracino/mirrorsolve"
bug-reports:  "https://github.com/jsarracino/mirrorsolve"
dev-repo:     "git+https://github.com/jsarracino/mirrorsolve"
license:      "GPL 3"
doc:          "https://github.com/jsarracino/mirrorsolve/doc"

depends: [
  "ocaml"         { >= "4.07.1"            }
  "coq"           { >= "8.13.0" }
  "dune"          { >= "2.4.0"             }
]

build: [ "dune" "build" "-p" name "-j" jobs ]
